Adicionando curso de Kubernets

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Contínua: nome completo</li>
+        <li>Kubernets</li>
     </ul>
 </body>
 </html>
