--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Curso de Docker: Criando containers sem dor de cabeça</li>
+        <li>Docker</li>
         <li>Ansible</li>
-        <li>Integração Contínua: nome completo</li>
+        <li>Integração Contínua</li>
         <li>Kubernets</li>
     </ul>
 </body>
